# statma

./: .gitignore  README.md  pyproject.toml
statma/: cli.py
