[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "statma"
version = "0.1.0"
description = "stat your agent."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "David Grace", email = "gracemann365@gmail.com" }
]
dependencies = [
  "typer>=0.9.0",
  "rich>=13.0.0",
  "httpx>=0.27.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "pyyaml>=6.0",
  "pillow>=10.0.0",
  "sentence-transformers>=2.7.0",
]

[project.scripts]
statma = "statma.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["statma"]
